Kubernetes/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
  namespace: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service # < - deploy ira gerenciar container com essa label Linhas 20
  template:
    metadata:
      labels:
        app: auth-service # < - tag do container
    spec:
      containers:
      - name: auth-service
        image: 123945314948.dkr.ecr.us-east-1.amazonaws.com/auth-service:c40ef5b
        ports:
        - containerPort: 8001 # <- apenas indica na documentação
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 30
