Kubernetes/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-clusterip
  namespace: auth-service
spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
